<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    tools:context=".RegisterActivity"
    android:id="@+id/scrollViewRegister">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusable="true" android:focusableInTouchMode="true"
        >


        <!-- Registration Form -->
        <LinearLayout

            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            >
            <!-- Full Name Label -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signUp"
                android:textSize="30sp"
                android:gravity="center"
                android:height="40sp"
                android:textColor="#ff6633"
                android:textStyle="bold"
                android:layout_marginTop="10dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Username"
                    android:id="@+id/textView" />

                <EditText android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_marginBottom="5dp"
                    android:textColorHint="#989898"
                    android:textColor="#000" />

            </LinearLayout>

            <!--  Email Label -->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="First Name"
                    android:id="@+id/textView6" />

                <EditText android:id="@+id/etFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="First Name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_marginBottom="5dp"
                    android:textColorHint="#989898"
                    android:textColor="#000" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Last Name"
                    android:id="@+id/textView5" />

                <EditText android:id="@+id/etLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Last Name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_marginBottom="5dp"
                    android:textColorHint="#989898"
                    android:textColor="#000" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Email"
                    android:id="@+id/textView4" />

                <AutoCompleteTextView android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"

                    android:layout_marginBottom="5dp"
                    android:textColorHint="#989898"
                    android:textColor="#000" />
            </LinearLayout>

            <!-- Password Label -->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Password"
                    android:id="@+id/textView3" />

                <EditText android:id="@+id/etPassword" android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1" android:singleLine="true"
                    android:layout_marginBottom="5dp"
                    android:textColorHint="#989898"
                    android:textColor="#000" />
            </LinearLayout>

            <!-- Confirm Password Password Label -->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Confirm Password"
                    android:id="@+id/textView2" />

                <EditText android:id="@+id/etConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:maxLines="1" android:singleLine="true"
                    android:layout_marginBottom="5dp"
                    android:textColorHint="#989898"
                    android:textColor="#000" />
            </LinearLayout>


            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:textColor="#000"
                android:text="@string/agree_terms_and_conditions"
                android:id="@+id/checkTerms"
                android:layout_gravity="left"
                android:layout_marginTop="10dp" />

            <!-- Register Button -->

            <Button android:id="@+id/bRegister"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:textStyle="bold"
                android:minHeight="45dp"
                android:textColor="#ffffffff"
                android:background="#ff6633"
                android:text="@string/register_new_account"/>
            <!-- Link to Login Screen -->

        </LinearLayout>
        <!-- Registration Form Ends -->
    </RelativeLayout>
</LinearLayout>